<resources>
    <string name="app_name">LVB_X</string>
    <string name="welcome_client_tips">尊敬的%s</string>
    <string name="welcom_nickname_male">先生</string>
    <string name="welcom_nickname_female">女士</string>
    <string name="welcome_client_hello">：您好！</string>
    <string name="dear_customer_tips">尊敬的客户！</string>
    <string name="mainmenu_live">电视直播</string>
    <string name="mainmenu_vod">视频点播</string>
    <string name="vod_play_btn">播放</string>
    <string name="vod_pause_btn">暂停</string>
    <string name="vod_item_nation">国家</string>
    <string name="name">名称</string>
    <string name="passwd_error">密码错误</string>
    <string name="single_price">单价</string>
    <string name="vod_item_type">类别</string>
    <string name="vod_item_direct">导演</string>
    <string name="vod_item_actor">主演</string>
    <string name="vod_introduce">简介</string>
    <string name="request_url_error">服务器返回数据异常!</string>
    <string name="live_back_data_null">回看节目不存在</string>
    <string name="url_is_null">访问url为空</string>
    <string name="live_no_item">电视直播节目为空！</string>
    <string name="vod_no_item">点播节目为空!</string>
    <string name="vod_data_error">点播节目错误!</string>
    <string name="net_is_unusable_tips">当前网络不可用，请联系管理员！</string>
    <string name="need_pay_tips">尊敬的用户：\n本视频收费%s元，收费后可永久观看。</string>
    <string name="net_is_usable">网络已连接!</string>
    <string name="request_default_city_failed">抱歉，无法获取默认城市信息!</string>
    <string name="welcome_text_format">欢迎进入%s</string>
    <string name="cancel_confirm_tips">尊敬的客户，确认取消该服务？</string>
    <string name="app_business_assistant">商旅助手</string>
    <string name="app_game">游戏娱乐</string>
    <string name="app_install_text">安装</string>
    <string name="hs_order_service">订餐服务</string>
    <string name="my_menu">我的菜谱</string>
    <string name="order_history">我的订单</string>
    <string name="order_history_count">我的订单(%s)</string>
    <string name="order_history_detail">订单详情</string>
    <string name="order_index">序号</string>
    <string name="order_number">订单号</string>
    <string name="order_time">下单时间</string>
    <string name="order_count">数量</string>
    <string name="order_price">金额</string>
    <string name="order_state">状态</string>
    <string name="choosed_menu">已选菜品</string>
    <string name="choosed_specail">已选特产</string>
    <string name="order_commit">下单</string>
    <string name="order_state_unkonw">未知</string>
    <string name="order_state_undoing">未受理</string>
    <string name="order_state_checked">已核单</string>
    <string name="order_state_sended">已传达</string>
    <string name="order_state_finished">已完成</string>
    <string name="order_state_canceled">已取消</string>
    <string name="roomservice_checkin_modify">更改续房</string>
    <string name="roomservice_checkin">续房</string>
    <string name="roomservice_checkout">退房</string>
    <string name="live_list">节目回看</string>
    <string name="live_menu_date">回看日期</string>
    <string name="no_tv_tips">暂无节目信息</string>
    <string name="rate_type">币种</string>
    <string name="rate_name">名称</string>
    <string name="rate_cbuyprice">现钞买入价</string>
    <string name="rate_hbuyprice">现汇买入价</string>
    <string name="rate_sell">卖出价</string>
    <string name="rate_base_price">基准价</string>
    <string name="rate_date">数据日期</string>
    <string name="cancel_menu">取消已选菜品</string>
    <string name="commit_check_in">提交了续房服务</string>
    <string name="commit_check_out">提交了退房服务</string>
    <string name="commit_wakeup">提交了叫醒服务</string>
    <string name="commit_clean">提交了打扫服务</string>
    <string name="status_unknow">未知状态</string>
    <string name="status_waiting">待处理</string>
    <string name="status_doing">处理中</string>
    <string name="status_finish">已完成</string>
    <string name="status_cancel">已取消</string>
    <string name="checkin_confirm">续房确定</string>
    <string name="checkout_confirm">退房确定</string>
    <string name="clean_confirm">打扫确认</string>
    <string name="committ">提交</string>
    <string name="city_check">城市查询</string>
    <string name="air_quality">空气质量：</string>
    <string name="update_at">更新于：</string>
    <string name="beijing_cn">北京</string>
    <string name="beijing_en">Beijing</string>
    <string name="newyork_cn">纽约</string>
    <string name="newyork_en">NewYork</string>
    <string name="london_cn">伦敦</string>
    <string name="london_en">London</string>
    <string name="special_type">特产类型</string>
    <string name="service_close_tips">尊敬的客户，您已退房，该功能已关闭!</string>
    <string name="no_need_switch_lang_tips">不需要切换，与当前语言相同</string>
    <string name="clean_confirm_contents">尊敬的客户，确认打扫时间为：%s分钟后</string>
    <string name="wakeup_confirm_contents">尊敬的客户，确认提交%s 叫醒服务</string>
    <string name="cancel_checkin">取消续房</string>
    <string name="cancel_checkout">取消退房</string>
    <string name="cancel_cleanup">取消打扫</string>
    <string name="cancel_wakeup">取消叫醒</string>
    <string name="date_choose">日期选择</string>
    <string name="minutes_after">分钟后</string>
    <string name="exit_tips">温馨提示</string>
    <string name="reset_system">需要重启您的系统,使得语言设置生效!</string>
    <string name="dot">：</string>
    <string name="default_num">5</string>
    <string name="wakeup_confirm">确认叫醒</string>
    <string name="cancel_tips">尊敬的用户，确定取消%s</string>
    <string name="cancel_wakeup_confirm_content">尊敬的客户，确认取消%s 叫醒服务</string>
    <string name="cancel_clean_contents">尊敬的客户，确认取消该项打扫服务</string>
    <string name="checkin_confirm_content">尊敬的客户，确定续房到：%s</string>
    <string name="checkout_confirm_content">尊敬的客户，确定马上退房？</string>
    <string name="to">至</string>
    <string name="commit_order_title">确定下单</string>
    <string name="commit_order_content">尊敬的客户，订单价格总计 ￥ %s</string>
    <string name="order_total_count">共%s个订单</string>
    <string name="order_total_dish">已点%s个</string>
    <string name="order_total_price">合计：  ￥%s</string>
    <string name="order_detail_code">订单号: %s</string>
    <string name="order_commit_success">您的下单已成功！</string>
    <string name="request_success">服务请求成功</string>
    <string name="requset_fail">服务请求失败，请联系管理员</string>
    <string name="order_commit_failed">下单失败！</string>
    <string name="hotspot_tag">无线接入点</string>
    <string name="wifipasswd_tag">动态WI-FI密码</string>
    <string name="blank_data">N/A</string>
    <string name="date_today">今天</string>
    <string name="loading">正在加载。。。</string>
    <string name="click_cancel">点击取消</string>
    <string name="expiry_tips">已过期</string>
    <string name="enter">进入</string>
    <string name="back">返回</string>
    <string name="rc_window">遥控</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="default_city">深圳</string>
    <string name="request_net_failed">请求服务器失败,失败原因为：\n%s</string>
    <string name="weather_city">天气预报城市</string>
    <string name="system_language">界面语言</string>
    <string name="about">关于</string>
    <string name="play_continue">继续播放</string>
    <string name="play_reset">重头播放</string>
    <string name="player_tips">未安装播放器,请安装!</string>
    <string name="keep_seat">留座</string>
    <string name="seat_time_unit">分钟</string>
    <string name="seat_time_hour">时</string>
    <string name="seat_time_minute">分</string>
    <string name="seat_time_second">秒</string>
    <string name="into_page">跳转</string>
    <string name="background_mgr_faild">后台管理打开失败,错误码:</string>
    <string name="admin">管理员</string>
    <string name="pair_setting">配对设置</string>
    <string name="admin_passwd_tips">请输入管理员密码</string>
    <string name="setting_main_text">系统设置</string>
    <string name="setting_signal_text">信源及网络设置</string>
    <string name="login_screen">登录界面</string>
    <string name="account">账户</string>
    <string name="account_tips">用户账号:</string>
    <string name="account_input">请输入账号</string>
    <string name="passwd_tips">用户密码:</string>
    <string name="passwd_input">请输入密码</string>
    <string name="ipAdd_tips">服务地址:</string>
    <string name="ipAdd_input">请输入IP地址</string>
    <string name="ip_error">ip地址错误</string>
    <string name="city_select">城市选择</string>
    <string name="current_city">当前城市:</string>
    <string name="update_tips">版本更新</string>
    <string name="new_version_update_need">发现新版本，是否更新？</string>
    <string name="download_failed">下载失败</string>
    <string name="app_install">程序安装</string>
    <string name="app_apk_isexist">安装程序已存在，确认安装</string>
    <string name="app_downloading">正在更新系统，请稍候。。。</string>
    <string name="app_downloading_continue">继续下载</string>
    <string name="simple_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="copyright_tips">深圳市宏辉智通科技有限公司&#160;&#160;版权所有</string>
    <string name="feedbak">反馈</string>
    <string name="clause">使用条款与隐私政策</string>
    <string name="send">发送</string>
    <string name="rc_contronller_tips">虚拟遥控器</string>
    <string name="feedback_hint">这里发送反馈的内容</string>
    <string name="consume_type">消费类型</string>
    <string name="consume_name">消费名称</string>
    <string name="consume_price">消费价格</string>
    <string name="consume_time">消费时间</string>
    <string name="consume_total_number">总共%s条消费记录， </string>
    <string name="consume_total_price">合计：  ￥%s</string>
    <string name="clause_contents">本应用辉视客系统尊重并保护所有使用服务的用户的个人隐私权。为了给您提供更准确、更有个性化的服务，除本隐私权政策另有规定外，在未征得您事先许可的情况下，辉视客不会将这些信息对外披露或向第三方提供。辉视客会不时更新本隐私权政策，您在同意辉视客络服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于辉视客络服务使用协议不可分割的一部分。
1. 适用范围
在您使用辉视客网络服务，或访问辉视客平台网页时，辉视客自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；
2. 信息使用
a) 辉视客不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和辉视客（深圳市宏辉智通科技有限公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。
b) 辉视客亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何辉视客平台用户如从事上述活动，一经发现，辉视客有权立即终止与该用户的服务协议。
c) 为服务用户的目的，辉视客可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与辉视客合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。
3. 信息披露
在如下情况下，辉视客将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：
a) 经您事先同意，向第三方披露；
b) 为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；
c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；
d) 如您出现违反中国有关法律、法规或者辉视客服务协议或相关规则的情况，需要向第三方披露；
e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；
f) 在辉视客平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，辉视客有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。
g) 其它辉视客根据法律、法规或者网站政策认为合适的披露。
4. 信息存储和交换
辉视客收集的有关您的信息和资料将保存在辉视客及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或辉视客收集信息和资料所在地的境外并在境外被访问、存储和展示。
5.  信息安全
a) 辉视客帐号均有安全保护功能，请妥善保管您的用户名及密码信息。辉视客将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。</string>
    <string name="connect_requst_title">连接请求</string>
    <string name="video_share_title">视频互享</string>
    <string name="image_share_title">图片分享</string>
    <string name="music_share_title">音乐分享</string>
    <string name="goto_sound_silient_mode">进入静音模式</string>
    <string name="goto_sound_normal_mode">恢复音量正常模式</string>
    <string name="connect_content_tag_two">的设备连接?</string>
    <string name="connect_content_tag_one">尊敬的用户，允许</string>
    <string name="recice_from_ip">IP地址为:</string>
    <string name="interactive_seeting">互动设置</string>
    <string name="wifi_passwd_input_tips">请输入动态WI-FI密码</string>
    <string name="server_ip_input_please">请输入服务器地址:端口</string>
    <string name="push_success">推送成功</string>
    <string name="authorize_success">授权成功</string>
    <string name="authorize_deny">拒绝授权</string>
    <string name="not_paired">尚未配对</string>
    <string name="controller_tips">控制</string>
    <string name="vod_sitcome">连续剧</string>
    <string name="sitcom_pre">上一集</string>
    <string name="sitcom_next">下一集</string>
    <string name="system_update">系统升级</string>
    <string name="new_version_found">发现新版本：%s</string>
    <string name="update_now">立即升级</string>
    <string name="vod_tips_txt1">提示：方向键”</string>
    <string name="vod_tips_txt2">“向下翻页，”</string>
    <string name="vod_tips_txt3">“向上翻页，按返回键返回</string>
</resources>