<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/update_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/layx50"
            android:layout_height="@dimen/layx50"
            android:background="@drawable/update_tag"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layx20"
            android:text="@string/system_update"
            android:textColor="@color/white"
            android:textSize="@dimen/layx35" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_versionTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layx20"
        android:text="@string/new_version_found"
        android:textColor="#037ece"
        android:textSize="@dimen/layx30" />

    <Button
        android:id="@+id/new_versionAction"
        android:layout_width="@dimen/layx200"
        android:layout_height="@dimen/layx60"
        android:layout_marginTop="@dimen/layx100"
        android:background="@drawable/update_button_selector"
        android:text="@string/update_now"
        android:textColor="@color/white"
        android:textSize="@dimen/layx30" />

</LinearLayout>