<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/layx720"
    android:layout_height="@dimen/layx260"
    android:layout_gravity="center"
    android:background="@drawable/dialog_black_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/clean_main_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layx40"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/time_controller_container"
            android:layout_width="@dimen/layx165"
            android:layout_height="@dimen/layx130"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/clean_arrow_up"
                android:layout_width="@dimen/layx40"
                android:layout_height="@dimen/layx40"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/arrow_up_selector"
                android:contentDescription="@string/app_name" />

            <Button
                android:id="@+id/clean_up_minutes"
                android:layout_width="@dimen/layx165"
                android:layout_height="@dimen/layx70"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/default_num"
                android:textColor="@color/white"
                android:textSize="@dimen/layx30" />

            <Button
                android:id="@+id/clean_arrow_down"
                android:layout_width="@dimen/layx40"
                android:layout_height="@dimen/layx40"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/arrow_down_selector"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <TextView
            android:id="@+id/minute_spe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layx20"
            android:layout_marginRight="@dimen/layx20"
            android:text="@string/minutes_after"
            android:textColor="@color/white"
            android:textSize="@dimen/layx25" />

        <Button
            android:id="@+id/clean_up_commit"
            android:layout_width="@dimen/layx180"
            android:layout_height="@dimen/layx66"
            android:layout_marginLeft="@dimen/layx20"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/committ"
            android:textColor="@color/white"
            android:textSize="@dimen/layx25" />
    </LinearLayout>

    <ListView
        android:id="@+id/clean_history_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layx100"
        android:layout_below="@id/clean_main_container"
        android:layout_marginBottom="@dimen/layx10"
        android:layout_marginLeft="@dimen/layx10"
        android:layout_marginRight="@dimen/layx10"
        android:layout_marginTop="@dimen/layx10"
        android:cacheColorHint="#00000000"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/layx2"
        android:drawSelectorOnTop="false"
        android:fastScrollEnabled="true"
        android:focusable="true"
        android:listSelector="@drawable/button_selector"
        android:scrollbars="none" >
    </ListView>

</RelativeLayout>