<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/about_content_main"
        android:layout_width="@dimen/layx800"
        android:layout_height="@dimen/layx500"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/about_tag_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layx20"
            android:layout_marginTop="@dimen/layx20"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/about_image"
                android:layout_width="@dimen/layx96"
                android:layout_height="@dimen/layx97"
                android:background="@drawable/about"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="@dimen/layx25" />
        </LinearLayout>

        <ListView
            android:id="@+id/about_list_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layx180"
            android:layout_marginBottom="@dimen/layx30"
            android:layout_marginLeft="@dimen/layx30"
            android:layout_marginRight="@dimen/layx30"
            android:cacheColorHint="#00000000"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/layx20"
            android:drawSelectorOnTop="false"
            android:fastScrollEnabled="true"
            android:listSelector="@drawable/button_selector"
            android:scrollbars="none" >
        </ListView>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/copyright_tips"
            android:textColor="@color/gray"
            android:textSize="@dimen/layx20" />
    </LinearLayout>

</RelativeLayout>