<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/window_banner_bottom_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/window_top_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layx50"
        android:background="@drawable/window_banner_top_bg" >

        <Button
            android:id="@+id/window_controller_tag"
            android:layout_width="@dimen/layx50"
            android:layout_height="@dimen/layx50"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/layx10"
            android:background="@drawable/floatwindow_bg"
            android:contentDescription="@string/about"
            android:gravity="center"
            android:text="@string/controller_tips"
            android:textColor="@color/white"
            android:textSize="@dimen/layx15" />

        <TextView
            android:id="@+id/current_vod_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/vod_sitcome"
            android:textColor="@color/white"
            android:textSize="@dimen/layx25" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/window_content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/window_controller_playpause"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/window_controller_play"
                android:layout_width="@dimen/layx181"
                android:layout_height="@dimen/layx181"
                android:layout_marginRight="@dimen/layx40"
                android:background="@drawable/window_play_selector" />

            <Button
                android:id="@+id/window_controller_pause"
                android:layout_width="@dimen/layx181"
                android:layout_height="@dimen/layx181"
                android:layout_marginLeft="@dimen/layx40"
                android:background="@drawable/window_pause_selector" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/window_controller_seekbar_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/current_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textSize="@dimen/layx25" />

            <TextView
                android:id="@+id/total_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textSize="@dimen/layx25" />

            <SeekBar
                android:id="@+id/window_mediacontroller_seekbar"
                style="@style/LVC_MediaController_SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layx20"
                android:layout_marginRight="@dimen/layx20"
                android:layout_toLeftOf="@id/total_percent"
                android:layout_toRightOf="@id/current_percent"
                android:max="100"
                android:progress="0" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/window_controller_pre_next_container"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/pre_sitcom_num"
            android:layout_width="@dimen/layx120"
            android:layout_height="@dimen/layx80"
            android:layout_marginRight="@dimen/layx20"
            android:background="@drawable/button_selector"
            android:text="@string/sitcom_pre"
            android:textColor="@color/white"
            android:textSize="@dimen/layx25" />

        <Button
            android:id="@+id/next_sitcom_num"
            android:layout_width="@dimen/layx120"
            android:layout_height="@dimen/layx80"
            android:layout_marginLeft="@dimen/layx20"
            android:background="@drawable/button_selector"
            android:text="@string/sitcom_next"
            android:textColor="@color/white"
            android:textSize="@dimen/layx25" />
    </LinearLayout>

</LinearLayout>